--- a/TermProject/app/src/main/AndroidManifest.xml
+++ b/TermProject/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
         <activity android:name=".ShowActivity"/>
         <activity android:name=".StatisticActivity"/>
         <activity android:name=".MapActivity1"/>
+        <activity android:name=".MapActivity2"/>
         <!--<activity android:name=".ShowListActivity"/>-->
 
     </application>
