--- a/TermProject/app/build.gradle
+++ b/TermProject/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services:9.8.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
+    compile 'com.squareup.okhttp:okhttp:2.7.2'
 }
