--- a/TermProject/app/src/main/AndroidManifest.xml
+++ b/TermProject/app/src/main/AndroidManifest.xml
@@ -62,6 +62,7 @@
         <activity android:name=".MapActivity2"/>
         <activity android:name=".ShowListActivity1"/>
         <activity android:name=".ShowListActivity2"/>
+        <activity android:name=".ShowWeatherActivity"/>
 
     </application>
 
